# Farm

FarmGame/: README.md  requirements.txt  savegame.json
FarmGame/backend/: CMakeLists.txt
FarmGame/backend/bindings/: bindings.cpp
FarmGame/backend/include/animals/: Animal.hpp  Chicken.hpp  Cow.hpp  Duck.hpp  Goat.hpp  Horse.hpp  Pig.hpp  Rabbit.hpp  Sheep.hpp
FarmGame/backend/include/farm/: Farm.hpp  Farmer.hpp
FarmGame/backend/include/production/: Feed.hpp  Product.hpp  Storage.hpp
FarmGame/backend/src/animals/: Animal.cpp  Chicken.cpp  Cow.cpp  Pig.cpp  Sheep.cpp
FarmGame/backend/src/farm/: Farm.cpp  Farmer.cpp
FarmGame/backend/src/production/: Feed.cpp  Product.cpp  Storage.cpp
FarmGame/frontend/: __init__.py  main.py  savegame.json
FarmGame/frontend/game/: __init__.py  constants.py  game_engine.py  game_state.py
FarmGame/frontend/ui/: __init__.py
FarmGame/frontend/ui/components/: __init__.py  animal_card.py  button.py  input_field.py  notification.py  panel.py  progress_bar.py  text.py  tooltip.py
FarmGame/frontend/ui/screens/: __init__.py  animal_details_screen.py  game_screen.py  inventory_screen.py  main_menu.py  new_game_screen.py  settings_screen.py  shop_screen.py
